--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,28 @@
     tools:context=".MainActivity">
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:listitem="@layout/item_store"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="parent"
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id=@+id/fab""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_add_business"
+            android:contentDescription"@dimen/common_padding_defult"
+            app:layout_contraintEnd_toEndOf="parent"
+            app:layout_contrainBottom_toBottomOf="parent>
+</com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
